--- a/Verkefni-1/index.html
+++ b/Verkefni-1/index.html
@@ -5,16 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Verkefni 1</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="my_first.css">
 </head>
 <body>
-    
-</body> 
-   <h1>  Halló heimur -fyrirsögn<h1>
-<h2>millifyrirsögn</h2>
-<h3>undirfyrirsögn</h3>
-<h4>áherlsutexti</h4>
-<p>málsgreinar</p>
-     body texti
-<h5>undirmálstexti</h5>  
 
-</html>
+        <section class="stevie"><h1>Verkefni 1.1</h1></section>
+
+        <div class="bucky"><h1>Hey Mah Dudes<h1></div>
+        <div class="nat"><h2>Here is text</h2></div>
+        <h3>Enjoy</h3>
+        <h4>Here is more text</h4>
+        <p>I'm trying</p>
+        Look I'm not deadpool alright
+        <h5>who the hell is Bucky</h5>
+<hr>
+        <h1>Verkefni 1.2</h1>
+
+        <div class="hulk"><h1><em>Gasoline</em></h1></div>
+        <div class="stucky"><em><strong>Are</strong> you insane like me<br> 
+        Been in pain like me?<br>
+        Bought a hundred dollar bottle of champagne like me?<br>
+        Just to pour the motherfucker down the drain like me?<br>
+        Would you use water bill to dry a stain like me?</em><br></p></div>
+    
+       <div class="fury"><p><strong><em>Are</strong> you high enough without the Marie Jane like me?<br>
+        Do you tear yourself apart to entertain like me?<br>
+        Do the people wisper 'bout you on the train like me?<br>
+        Saying that you shouldn't waist your pretty face like me?</em></p></div>
+
+       <div class="shield"><p><strong><em>And all the people say<br>
+        You can't wake up, this is not a dream<br>
+        You're part of a machine, you are not a human being<br>
+        With your face all made up, living on screen<br>
+        Low on self esteem so you run on gasoline</strong></em></p>
+
+        <p><strong><em>I think there's a flaw in my code<br>
+        These voices won't leave me alone<br>
+        Well my heart is gold and my hands are cold</em></strong></p></div>
+
+        <div class="pinky"><p><strong><em>Are</strong> you deranged like me?<br>
+        Are you strange like me?<br>
+        Lighting maches just swallow up the flame like me?<br>
+        Do you call yourself a fucking hurricane like me?<br>
+        Pointing fingers 'cause you'll never take the blame like me?</em></p></div>
+
+        <div class="x-men"><p><strong><em>And all the people say<br>
+        You can't wake up, this is not a dream<br>
+        You're part of a machine, you are not a human being<br>
+        With your face all made up,living on a screen<br>
+        Low on self esteem, so you run on gasoline</em></strong></p>
+
+        <p><strong><em>I think there's a flaw in my code<br>
+        These voices won't leave me alone<br>
+        Well my heart is gold and my hands are cold</em></strong></p></div>
+       <div class="loki"><p><em>© & ® Allur réttur áskilinn Halsey</p></em></div> 
+<hr>
+    <h2>Verkefni 1.3</h2>
+
+    <div class="thor"><h1><strong>Námskröfur</strong></h1></div>
+
+    <div class="blue"><ol><li>Nemandi skal ljúka 9 eingum á önn hið minsta.</li>                              
+    <li>Heimilt er að víkja frá þessu ákævi ef um er að ræða:</li>
+    <div class="baldur"><ul><li>Sértæka erfiðleika í nám, svo sem lesröskun eða fötlun
+        <li>Lokaönn í námi</li>
+        <li>Nemendur á námssamning</li>
+        <li>Nemendur á fyrstu önn í námi</ul></li></div>
+    <li>Nemandi sem fellur á önn fær aðeins heimild til innritunar hafi
+    hann haft meira en 70% mætingu og geri samning um ástundun og
+    skólasókn</li>
+    <li>Nemandi sem fallið á tveimur önnum í röð eða þrem önnum samtals fær
+    fær ekki skólavist á næstu önn
+    <li>Falli nemandi á önn á hann rétt á að láta þá áfanga standa sem hann hefur
+    fengið einkunnina 5</li></ol></div> 
+<hr>
+        <h2>Verkefni 1.4</h2>
+
+        <div class="skurge"><h1><strong>ELVIS PRESTLEY KONUNGUR ROKKSINS</strong></h1></div>
+
+        <div class="hel"><p><strong><em>Elvis Prestley</em></strong> fæddist 8.janúar 1935 í Missisipifylki í Bandaríkjunum. Fyrir
+            tónlistaráhugamenn má geta þess að önnur breiðsakífa Nick Cave And The Badseeds heitir
+            <em>The Firstborn Is Dead</em> sem vísar til þess að Elvis átti tvíburabróður sme fæddist andvana,
+            og fyrsta lag skífunar heitir einmitt "Tubelo" eftir fæðingarbæ Elvis.</p></div>
+
+        <div class="narfi"><p><strong>Elvis</strong> er opinberlega sagður hafa látist í Memphis Tenessefylki 16 ágúst 1977, 47 ára að
+            aldri. Hann væri 76 ára gamall ef hann væri lifandi í dag (árið 2011) Samkvæmt
+            frásögnum náinnar vina og samstarfsmanna Elvis, fannst hann látinn inn á baðherbegi á
+            setri sínu Graceland. Út frá því hafa sprottið ýmsar útgáfur af andlátsorðum hans og
+            örugglega allar skáldsögur</p></div>
+
+       <div class="sleipnir"><p><strong>Elvis</strong> átti erfit með svefn síðustu ævi ár sín og til að trufla ekki unnustu sína, Grace
+            Alden, í svefnherberginu, fór hann stundum inn á baðherbergi á kvöldin til að geta lesið í
+            friði. Þess vegna halda margir því fram að hans síðustu orð hafa verið: <em>"I think I'll go to</em>
+            <em>the bathroom to read"</em> eða einhvað í þá áttina.</p></div>
+</html> 
+</body>
