--- a/Verkefni-1/index.html
+++ b/Verkefni-1/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="my_first.css">
 </head>
 <body>
-
+    <section class="Russ">
+    <a href="umm.html">umm.html</a>
         <section class="stevie"><h1>Verkefni 1.1</h1></section>
 
         <div class="bucky"><h1>Hey Mah Dudes<h1></div>
@@ -19,7 +20,7 @@
         Look I'm not deadpool alright
         <h5>who the hell is Bucky</h5>
 <hr>
-        <h1>Verkefni 1.2</h1>
+        <div class="two3"><h1>Verkefni 1.2</h1></div>
 
         <div class="hulk"><h1><em>Gasoline</em></h1></div>
         <div class="stucky"><em><strong>Are</strong> you insane like me<br> 
@@ -60,14 +61,14 @@
         Well my heart is gold and my hands are cold</em></strong></p></div>
        <div class="loki"><p><em>© & ® Allur réttur áskilinn Halsey</p></em></div> 
 <hr>
-    <h2>Verkefni 1.3</h2>
+    <div class="two0"><h2>Verkefni 1.3</h2></div>
 
     <div class="thor"><h1><strong>Námskröfur</strong></h1></div>
 
     <div class="blue"><ol><li>Nemandi skal ljúka 9 eingum á önn hið minsta.</li>                              
     <li>Heimilt er að víkja frá þessu ákævi ef um er að ræða:</li>
     <div class="baldur"><ul><li>Sértæka erfiðleika í nám, svo sem lesröskun eða fötlun
-        <li>Lokaönn í námi</li>
+        <ul><li>Lokaönn í námi</li>
         <li>Nemendur á námssamning</li>
         <li>Nemendur á fyrstu önn í námi</ul></li></div>
     <li>Nemandi sem fellur á önn fær aðeins heimild til innritunar hafi
@@ -78,7 +79,7 @@
     <li>Falli nemandi á önn á hann rétt á að láta þá áfanga standa sem hann hefur
     fengið einkunnina 5</li></ol></div> 
 <hr>
-        <h2>Verkefni 1.4</h2>
+        <div class="bla"><h2>Verkefni 1.4</h2></div>
 
         <div class="skurge"><h1><strong>ELVIS PRESTLEY KONUNGUR ROKKSINS</strong></h1></div>
 
@@ -97,5 +98,6 @@
             Alden, í svefnherberginu, fór hann stundum inn á baðherbergi á kvöldin til að geta lesið í
             friði. Þess vegna halda margir því fram að hans síðustu orð hafa verið: <em>"I think I'll go to</em>
             <em>the bathroom to read"</em> eða einhvað í þá áttina.</p></div>
+        </section>
 </html> 
 </body>
