--- a/Verkefni-1/index.html
+++ b/Verkefni-1/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="my_first.css">
 </head>
 <body>
-    <section class="Russ">
-    <a href="umm.html">umm.html</a>
+        <a href="umm.html">YAY</a>
         <section class="stevie"><h1>Verkefni 1.1</h1></section>
 
         <div class="bucky"><h1>Hey Mah Dudes<h1></div>
@@ -83,21 +82,21 @@
 
         <div class="skurge"><h1><strong>ELVIS PRESTLEY KONUNGUR ROKKSINS</strong></h1></div>
 
-        <div class="hel"><p><strong><em>Elvis Prestley</em></strong> fæddist 8.janúar 1935 í Missisipifylki í Bandaríkjunum. Fyrir
+        <p><strong><em><span class="tony">Elvis Prestley</span></em></strong> fæddist 8.janúar 1935 í Missisipifylki í Bandaríkjunum. Fyrir
             tónlistaráhugamenn má geta þess að önnur breiðsakífa Nick Cave And The Badseeds heitir
             <em>The Firstborn Is Dead</em> sem vísar til þess að Elvis átti tvíburabróður sme fæddist andvana,
-            og fyrsta lag skífunar heitir einmitt "Tubelo" eftir fæðingarbæ Elvis.</p></div>
+            og fyrsta lag skífunar heitir einmitt<span class="spoopy"> "Tubelo" </span>eftir fæðingarbæ Elvis.</p>
 
-        <div class="narfi"><p><strong>Elvis</strong> er opinberlega sagður hafa látist í Memphis Tenessefylki 16 ágúst 1977, 47 ára að
+        <p><strong><span class="spoopytwo">Elvis</span></strong> er opinberlega sagður hafa látist í Memphis Tenessefylki 16 ágúst 1977, 47 ára að
             aldri. Hann væri 76 ára gamall ef hann væri lifandi í dag (árið 2011) Samkvæmt
             frásögnum náinnar vina og samstarfsmanna Elvis, fannst hann látinn inn á baðherbegi á
             setri sínu Graceland. Út frá því hafa sprottið ýmsar útgáfur af andlátsorðum hans og
-            örugglega allar skáldsögur</p></div>
+            örugglega allar skáldsögur</p>
 
-       <div class="sleipnir"><p><strong>Elvis</strong> átti erfit með svefn síðustu ævi ár sín og til að trufla ekki unnustu sína, Grace
+        <p><strong><span class="spoopythree">Elvis</span></strong> átti erfit með svefn síðustu ævi ár sín og til að trufla ekki unnustu sína, Grace
             Alden, í svefnherberginu, fór hann stundum inn á baðherbergi á kvöldin til að geta lesið í
-            friði. Þess vegna halda margir því fram að hans síðustu orð hafa verið: <em>"I think I'll go to</em>
-            <em>the bathroom to read"</em> eða einhvað í þá áttina.</p></div>
-        </section>
+            friði. Þess vegna halda margir því fram að hans síðustu orð hafa verið: <em><span class="spoopyfour">"I think I'll go to
+            the bathroom to read"</span></em> eða einhvað í þá áttina.</p>
+    
 </html> 
 </body>
