--- a/Verkefni-1/umm.html
+++ b/Verkefni-1/umm.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YEET</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="yeet.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="my_first.css" />
    
 </head>
 <body>       
 <hr>
-<a href="index.html">index.html</a>
+<a href="index.html">WHOOP</a>
 
             <div class="james"> 
 <p><strong> James Buchanan Barnes "Bucky Barnes"</strong> is a fictional character<br>
