--- a/Verkefni-2/index.html
+++ b/Verkefni-2/index.html
@@ -1,41 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Flexbox row & column order">
+	<meta name="author" content="Guðmundur Jón Guðjónsson">
+	<title>Flexbox row & column order</title>
+	<link rel="stylesheet" type="text/css" href="order.css">
+</head>
 <body>
-<h5>verk 2.1 </h5>
-<h1>box modelið</h1>
-<div>class="box">
-    <h1>box modelið</h1>
-
-</div>
-<div>class="box"> 
-    <h1>class="box2">box modelið</h1>
-</div>
-   <hr>
-   <h5>verk 2.2</h5> 
-   <ul>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-    </Ul>
-   
-    <UL> class="Inline">
-
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-       <li> BUCKY BARNES</li>
-    <ul>
-    <ul>class="inlineBlock">
-
-    <li> BUCKY BARNES</li>
-    <li> BUCKY BARNES</li>
-    <li> BUCKY BARNES</li>
-    <li> BUCKY BARNES</li>
-    <li> BUCKY BARNES</li>
-    <li> BUCKY BARNES</li>
-
-
+	<h1>Flexbox row order</h1>
+	<section class="row">
+		<div class="blar"><p class="box">blár</p></div>
+		<div class="graenn"><p class="box">Grænn</p></div>
+		<div class="raudur"><p class="box">Rauður</p></div>
+		<div class="gulur"><p class="box">Gulur</p></div>
+	</section>
+	<h1>Flexbox column order</h1>
+	<section class="col">
+		<div class="blar"><p class="box">blár</p></div>
+		<div class="graenn"><p class="box">Grænn</p></div>
+		<div class="raudur"><p class="box">Rauður</p></div>
+		<div class="gulur"><p class="box">Gulur</p></div>
+	</section>
+	<section>
+		<footer>
+			<p>&copy; 2019 Ástrós Erla</p>
+			<p><a href="https://github.com/vefgrunnur/vefgrunnur.github.io/wiki" target="_blank"> Bjargir </a></p>
+		</footer>
+	</section>
 </body>
+</html>
