--- a/Verkefni-3/Bucky.html
+++ b/Verkefni-3/Bucky.html
@@ -6,19 +6,12 @@
     <title>Bucky Barnes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="Barnes.css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
 </head>
 <body>
 <header>
     <h1>THIS IS FACTS ABOUT JAMES BUCHANEN BARNES</h1>
 </header>
-<nav class="topnav">
-<ul class="topmenu">
-    <li><a href="Bucky.html">Sergeant Barnes</a></li>
-    <li><a href="Captain.html">Captain Rogers</a></li>
-    <li><a href="NataliaRomanov.html">Agent Romanov</a></li>
-    <li><a href="NickFury.html">Director Fury</a></li>
-</ul>
-</nav>
 <main class="content">
     <aside class="a1">
         <p><h2><strong>HIS NAME IS JAMES BUCHANEN BARNES</strong><br></h2>
@@ -28,15 +21,15 @@
         <h3>so have fun reading this</h3></p>
     </aside>
     <article class="art">
-        <p><blockquote>Sergeant James Buchanan "Bucky" Barnes was a former soldier of the 107th<br> 
+        <p>Sergeant James Buchanan "Bucky" Barnes was a former soldier of the 107th<br> 
             Regiment and the best friend of Steve Rogers, since childhood.<br> 
             Barnes was conscripted and assigned to the 107th in 1942.<br>
-            His regiment was captured by the forces of <strong>HYDRA</strong>, but Barnes along with what remained of his regiment were rescued by Rogers,<br> 
+            <blockquote class="buckyyo"> His regiment was captured by the forces of <strong>HYDRA</strong>, but Barnes along with what remained of his regiment were rescued by Rogers,<br> 
             who had become <strong>Captain America</strong> during Barnes' military absence.<br>
             Joining forces in the continuing war, Barnes and Rogers formed the Howling Commandos to battle the Red Skull's forces.<br>
             During an attempt to capture <strong>HYDRA</strong> scientist Arnim Zola,<br> 
-            Barnes was caught in an ambush and plummeted hundreds of feet from the <strong>HYDRA</strong> train.<br> 
-            As no body was ever recovered, he was then presumed dead, but officially listed as <strong>MIA</strong></blockquote></p>
+            Barnes was caught in an ambush and plummeted hundreds of feet from the <strong>HYDRA</strong> train.</blockquote><br> 
+            As no body was ever recovered, he was then presumed dead, but officially listed as <strong>MIA</strong></p>
     </article>
     <aside class="a2">
         <h1>BUCKY BARNES IS NOT A VILLAIN</h1>
@@ -47,10 +40,13 @@
     </aside>
 </main>
 <footer>
-    <a href="https://marvelcinematicuniverse.fandom.com/wiki/Winter_Soldier">Things you might want to know about the winter soldier</a>
+<ul class="topmenu">
+    <li><a href="Bucky.html">Sergeant Barnes</a></li>
     <li><a href="Captain.html">Captain Rogers</a></li>
     <li><a href="NataliaRomanov.html">Agent Romanov</a></li>
     <li><a href="NickFury.html">Director Fury</a></li>
-</footer>  
+    <a href="https://marvelcinematicuniverse.fandom.com/wiki/Winter_Soldier">Things you might want to know about the winter soldier</a>
+</footer>
+</ul>  
 </body>
 </html>
