--- a/Verkefni-3/Captain.html
+++ b/Verkefni-3/Captain.html
@@ -29,14 +29,15 @@
         Shit guys it's just super cool how he knocks out everyone with his shield it is some good content boii</P>
     </aside>
     <article class="art">
-        <p><blockquote><h3>CAPTAIN AMERICA!!!!</h3><br>
-        Steven Grant "Steve" Rogers is a World War II veteran,and is known as the world's first superhero.<br> 
+        <p><h3>CAPTAIN AMERICA!!!!</h3><br>
+        I can't say this enough, cap's shield is just so fucking cool I just can't it looks and is just super freaking cool it must be heavy though I man after all it's made out of vibrainum and that's like super strong metal and stuff like that I don't know how to explain
+        <blockquote class="capyo">Steven Grant "Steve" Rogers is a World War II veteran,and is known as the world's first superhero.<br> 
         Born within Brooklyn, New York City, the young Rogers had suffered from numerous health problems,<br> 
         and upon America's entry into World War II, was rejected from military service despite several attempts to enlist.<br> 
         Determined to serve, he ultimately volunteered for the top-secret Super Soldier program,<br> 
-        and the frail Rogers was then enhanced to the peak of human perfection.<br> 
+        and the frail Rogers was then enhanced to the peak of human perfection.</blockquote><br> 
         Rogers soon joined the war effort as the mascot, given the new moniker of Captain America,<br> 
-        and later joined the war with a combat role after he single-handedly liberated captured Allied POWs.</blockquote></p>
+        and later joined the war with a combat role after he single-handedly liberated captured Allied POWs.</p>
     </article>
     <aside class="a2">
       <p>This is tottally the content you wanted, am I right fren?<br>
@@ -45,11 +46,9 @@
     </aside>
 </main>
 <footer>
-    <li><a href="Bucky.html">Sergeant Barnes</a></li>
-    <li><a href="Captain.html">Captain Rogers</a></li>
-    <li><a href="NataliaRomanov.html">Agent Romanov</a></li>
-    <li><a href="NickFury.html">Director Fury</a></li>
-
+<ul class="topmenu,footer">
+    <a href="https://marvelcinematicuniverse.fandom.com/wiki/Captain_America">If you want to read about Captain Rogers</a>
+</ul>
 </footer>
 </body>
 </html>
