--- a/Verkefni-3/NataliaRomanov.html
+++ b/Verkefni-3/NataliaRomanov.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 <header>
-    <a href="https://marvelcinematicuniverse.fandom.com/wiki/Black_Widow"><h5>Here is stuff about Nat</h5></a>
     <h1>NATALIA ROMANOV</h1>
 </header>
 <nav class="topnav">
@@ -29,7 +28,7 @@
     yea okay sorry my bi-ass was freaking out but still not a got damm lie here</P>
 </aside>
 <article class="art">
-     <p><blockquote>Natalia Alianovna "Natasha" Romanoff, better known as Black Widow,<br> 
+     <p><blockquote class="natyo">Natalia Alianovna "Natasha" Romanoff, better known as Black Widow,<br> 
         is one of the most talented spies and assassins in the entire world and a founding member of the Avengers.<br> 
         Originally an agent of the Soviet agency for foreign intelligence, the KGB, she later became a member of S.H.I.E.L.D., the international counter-intelligence agency.<br> 
         Having extensive mastery in martial arts and armed with her Widow's Bite, Black Widow became one of S.H.I.E.L.D.'s most efficient agents.<br> 
@@ -45,5 +44,12 @@
     In the comics she is freaking badass and omg Scarlet Johanson just acts her so well Scarlet is fucking badass</p>
 </aside>
 </main>
+<footer>
+        <a href="https://marvelcinematicuniverse.fandom.com/wiki/Black_Widow"><h5>Here is stuff about Nat</h5></a>
+    <li><a href="Bucky.html" class="virkur">Sergeant Barnes</a></li>
+    <li><a href="Captain.html" class="virkur">Captain Rogers</a></li>
+    <li><a href="NataliaRomanov.html">Agent Romanov</a></li>
+    <li><a href="NickFury.html">Director Fury</a></li>
+</footer>
 </body>
 </html>
