--- a/Verkefni-3/NickFury.html
+++ b/Verkefni-3/NickFury.html
@@ -13,14 +13,14 @@
 </head>
 <body>
  <header>
-     <h1>THIS IS THE BEST CHARACTER IN THE FUCKING MCU EVER!!!!!!!</h1>
+     <h1><strong>NICK FURY IS THE BEST CHARACTER IN THE FREAKING MCU EVER!!!!!!!</strong></h1>
  </header> 
  <nav class="topnav">
-<ul class="topmenu">
-    <li><a href="Bucky.html" class="virkur">Sergeant Barnes</a></li>
-    <li><a href="Captain.html" class="virkur">Captain Rogers</a></li>
-    <li><a href="NataliaRomanov.html" class="virkur">Agent Romanov</a></li>
-    <li><a href="NickFury.html">Director Fury</a></li>
+    <ul class="topmenu">
+        <li><a href="Bucky.html" class="virkur">Sergeant Barnes</a></li>
+        <li><a href="Captain.html" class="virkur">Captain Rogers</a></li>
+        <li><a href="NataliaRomanov.html" class="virkur">Agent Romanov</a></li>
+        <li><a href="NickFury.html">Director Fury</a></li>
 </ul>
  </nav>
  <main class="content">
@@ -39,18 +39,22 @@
             until he was promoted to the position of Director.<br> 
             From this position, Fury refocused his efforts on organising the Avengers<br> 
             Initiative with intentions of bringing together any super powered individuals who could protect the world from any threat.<br> 
-            Despite some considerable reluctance from World Security Council members, Fury had still continued all his efforts and eventually managed to recruit both Iron Man and Captain America into their Initiative.</blockquote>
-     </article>
+            Despite some considerable reluctance from World Security Council members, Fury had still continued all his efforts and eventually managed to recruit both Iron Man and Captain America into their Initiative.<br>
+            Following the Avengers' victory, Fury hired Captain America to become an agent of S.H.I.E.L.D., while Fury worked on the new Project Insight. However, when Fury began to suspect that something was wrong with Project Insight, he then found himself becoming a target of the Winter Soldier, forcing Fury to fake his own death and go into hiding.<br>
+            With limited people he could trust, Fury then turned to Captain America along with Black Widow, the Falcon and Maria Hill to lead the fight,<br> 
+            as he soon discovered that HYDRA had secretly managed to infiltrate S.H.I.E.L.D. and Alexander Pierce was the leader, as Captain America had also learned that the Winter Soldier was actually his friend Bucky Barnes who had been brainwashed by<br>
+            HYDRA decades following Barnes' apparent death. <br>
+            <a href="https://marvelcinematicuniverse.fandom.com/wiki/Nick_Fury">Here you can read about Nick Fury</a></blockquote>
+        </article>
      <aside class="a2">
         <p>Yea I don't have much else to say that he is fucking cool 
         <h3>NICHOLAS JOSEPH FURY IS THE BEST FREAKING MARVEL CHARACTER TO EVER EXIST TELL ME I'M WRONG I DARE YOU!!!!!!!!!!!!</h3></p>
      </aside>
  </main>
  <footer>
-    <li><a href="Bucky.html" class="virkur">Sergeant Barnes</a></li>
-    <li><a href="Captain.html" class="virkur">Captain Rogers</a></li>
-    <li><a href="NataliaRomanov.html" class="virkur">Agent Romanov</a></li>
-    <li><a href="NickFury.html">Director Fury</a></li>
- </footer>  
+<ul class="topmenu">
+    <a href="https://en.wikipedia.org/wiki/Nick_Fury_(Ultimate_Marvel_character)">Here are some basic facts bout Nick Fury</a>
+</ul>
+</footer>  
 </body>
 </html>
