--- a/Verkefni-5/um_mig.html
+++ b/Verkefni-5/um_mig.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Stuff about me!!!!!!!!!!</title>
+    <title>ÁhugaMál</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="um_mig.css">
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
@@ -20,26 +20,18 @@
     </ul>
     </nav>
 <article class="art">
-<figure>
-    <div class="photo1">
-        <img src="PHOTOS/music.png" alt="">
-        <img src="PHOTOS/music101.jpg" alt="BLAA" width="6%" height="100px">
-    </div>
-    <section class="music"><h2>MUSIC</h2>
+    <section class="music"><h2>MUSIC</h2><img src="PHOTOS/note.jpg" alt="?" width="400"height="300">
     <p>We can all agree that music is evrything to be honest.
     I can't go through one day without listening to music at least like 100 times. 
     Haha okay that may be a bit extreem but well yea we're all diffrened
     <blockquote>THERE ARE SO MANY PEOPLE WHO HAVE BEEN SAVED BY MUSIC AND THAT IS BEAUTIFUL</blockquote></section>
     </p>
-</figure>
-<figure>
     <img src="PHOTOS/marvelcomics.png" alt="MARVEL??">
     <p>Let us speak about Marvel right now or maybe not
     ugh doesn't matter Marvel is some good stuff alright <br>
     Okay let me be real for a sec. All I'm saying is that The Marvel Universe is the best thing ever and I wish it was real if I'm honest 
    <blockquote>WHY ISN'T THE MCU REAL HOW COOL WHOULD THAT BE</blockquote></section>
    </p>
-   <div class="p2"><img src="PHOTOS/avengers.jpg" alt="dis is die avengers" width="38%" height="340px">
 </figure>
 </article>
 </main>  
@@ -49,13 +41,10 @@
         <li>
         <a href="innerlinks.html">Efnisyfirlit</a>
         </li></ul>
-    <nav>
-        <dt>Name:</dt>
-            <dd>Alexis</dd>
-        <dt>Alter Ego:</dt>
-            <dd>Night</dd>
+    <nav class="germen">
+        <iframe width="400" height="300" src="https://www.youtube.com/embed/UsnRQJxanVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1740.3012483751663!2d-21.905147484246303!3d64.13924132347552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48d674cc84500001%3A0x16719bf129fa31a7!2zVMOma25pc2vDs2xpbm4!5e0!3m2!1sen!2sis!4v1553771026109" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </nav>
-        <a href="https://www.buzzfeed.com/maritsapatrinos/what-color-is-your-soul">Do you wanna take a boring quiz, well here ya go</a>
 </footer>     
 </body>
 </html>
