--- a/Verkefni-5/um_mig.html
+++ b/Verkefni-5/um_mig.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
+    <section class="jfk">
 <header>
     <h1><strong>ÁHUGAMÁL</strong></h1>
     <span class="float">
@@ -29,8 +30,9 @@
         <li><a href="yay_number2.html">Verkefni 2</a></li>
     </ul>
     </nav>
+    <section class="content">
 <article class="art">
-<span class="col-1"> <img src="PHOTOS/music (1).png" alt="bla" width="200" height="200"></span>
+<div class="col-1"> <img src="PHOTOS/music (1).png" alt="bla" width="200" height="200"></div>
         <img src="PHOTOS/colorfulllnotes.png" alt="bla" width="200" height="200"></div>
         <p>We can all agree that music is evrything to be honest.
             I can't go through one day without listening to music at least like 100 times. 
@@ -43,7 +45,8 @@
             Okay let me be real for a sec. All I'm saying is that The Marvel Universe is the best thing ever and I wish it was real if I'm honest 
         <blockquote>WHY ISN'T THE MCU REAL HOW COOL WHOULD THAT BE</blockquote></section>
         </p>
-    </article>  
+    </article> 
+</section> 
 <footer>
     <ul class="low"><li>
 <a href="index.html">Bakgrunnur</a></li>
@@ -54,6 +57,7 @@
     <iframe width="400" height="300" src="https://www.youtube.com/embed/UsnRQJxanVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1740.3012483751663!2d-21.905147484246303!3d64.13924132347552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48d674cc84500001%3A0x16719bf129fa31a7!2zVMOma25pc2vDs2xpbm4!5e0!3m2!1sen!2sis!4v1553771026109" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </nav>
-    </footer>     
+    </footer>
+</section>     
 </body>
     </html>
